# TasmoManager

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  icon  version.cmake  version_header.cmake
cmake/: CPackInfos.cmake  TasmoManager.desktop  copy_qt5_dlls_to_bin_dir.cmake
resources/: 16x Icons.ai  24x Icons.ai  32x Icons.ai  64x Icons.ai  Bulbs.ai  Misc Icons.ai  appicon.icns  resources.qrc  setoptions.schema.json  tasmota-releases.json
scripts/linux/: after_build.sh  before_build.sh  build.sh  env.sh  install.sh
scripts/macOS/: after_build.sh  before_build.sh  build.sh  env.sh  install.sh
scripts/win/: after_build.sh  before_build.sh  build.sh  deploy.sh  env.sh  install.sh  install_qmqtt.bat
shared/: CPackInfos.cmake  TasmoManager.desktop  tasmomanager.iss  tasmomanager.json  tasmomanager.plist
shared/qif/config/: config.xml  styles.qss
src/: CMakeLists.txt  main.cpp  version.h.in
src/app/: device.cpp  device.h  devicemanager.cpp  devicemanager.h  mqttserver.h  mqttservermanager.cpp  mqttservermanager.h  networkscanthread.cpp  networkscanthread.h  preferencesmanager.cpp  preferencesmanager.h
src/gui/: devicecolorwidget.cpp  devicecolorwidget.h  devicecolorwidget.ui  deviceinfowidget.cpp  deviceinfowidget.h  deviceinfowidget.ui  devicemqttserverswidget.cpp  devicemqttserverswidget.h  devicemqttserverswidget.ui  deviceoptionswidget.cpp  deviceoptionswidget.h  deviceoptionswidget.ui  devicepowerwidget.cpp  devicepowerwidget.h  devicepowerwidget.ui  editserverdialog.cpp  editserverdialog.h  editserverdialog.ui  fullinfowidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  selectserverdialog.cpp  selectserverdialog.h  selectserverdialog.ui  setoptionwidget.cpp  setupdevicedialog.cpp  setupdevicedialog.h  setupdevicedialog.ui  terminaldialog.cpp  terminaldialog.h  terminaldialog.ui  wifinetworkswidget.cpp  wifinetworkswidget.h  wifinetworkswidget.ui
src/gui/device_controls/: devicecolorwidget.cpp  devicecolorwidget.h  deviceinfowidget.cpp  deviceinfowidget.h  deviceinfowidget.ui  devicepowerwidget.cpp  devicepowerwidget.h  devicepowerwidget.ui
src/gui/device_options/: deviceoptionswidget.cpp  deviceoptionswidget.h  deviceoptionswidget.ui  fullinfowidget.cpp  fullinfowidget.ui  generalsettingswidget.cpp  generalsettingswidget.h  generalsettingswidget.ui  mqttconfigwidget.cpp  mqttconfigwidget.h  mqttconfigwidget.ui  setoptionwidget.h  setoptionwidget.ui  wifinetworkswidget.cpp  wifinetworkswidget.h
src/gui/wizards/: setupdevicedialog.cpp  setupdevicedialog.h  setupdevicedialog.ui  updatedevicedialog.cpp  updatedevicedialog.h  updatedevicedialog.ui
src/misc/: softwareupdate.cpp  softwareupdate.h
